# audit-trail-fastAPI

./: .env  README.md  _modules.json  main.py  models.py  pyproject.toml
models/: auditmodel.py  settings.py
storage/: storage.py
